--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -84,27 +84,21 @@ jobs:
         include:
           - target: x86_64-apple-darwin
             os: macos-13 
-            use_cross: false
             asset_ext: zip
           - target: aarch64-apple-darwin
             os: macos-14
-            use_cross: false
             asset_ext: zip
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
-            use_cross: false
             asset_ext: tar.gz
           - target: x86_64-unknown-linux-musl
             os: ubuntu-latest
-            use_cross: true
             asset_ext: tar.gz
           - target: aarch64-unknown-linux-gnu
             os: ubuntu-latest
-            use_cross: true
             asset_ext: tar.gz
           - target: aarch64-unknown-linux-musl
             os: ubuntu-latest
-            use_cross: true
             asset_ext: tar.gz
     steps:
       - name: Checkout code
@@ -115,12 +109,6 @@ jobs:
         with:
           toolchain: stable
           target: ${{ matrix.target }} 
-
-      - name: Install cargo-zigbuild
-        if: matrix.use_cross == 'true'
-        uses: taiki-e/install-action@v2
-        with:
-          tool: cargo-zigbuild
 
       - name: Cache Cargo
         uses: actions/cache@v4
@@ -137,13 +125,7 @@ jobs:
 
       - name: Build binary
         run: |
-          BUILD_COMMAND_PREFIX=""
-          if [[ "${{ matrix.use_cross }}" == "true" ]]; then
-            BUILD_COMMAND_PREFIX="cargo zigbuild"
-          else
-            BUILD_COMMAND_PREFIX="cargo build"
-          fi
-          $BUILD_COMMAND_PREFIX --release --target ${{ matrix.target }}
+          cargo build --release --target ${{ matrix.target }}
 
       - name: Prepare artifact file name
         id: artifact_details
