--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -109,6 +109,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        
+      - name: Install mold linker
+        uses: rui314/setup-mold@v1
 
       - name: Install Rust toolchain
         uses: actions-rust-lang/setup-rust-toolchain@v1
