--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -84,28 +84,16 @@ jobs:
         include:
           - target: x86_64-apple-darwin
             os: macos-13 
-            use_cross: false
-            asset_ext: zip
           - target: aarch64-apple-darwin
             os: macos-14
-            use_cross: false
-            asset_ext: zip
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
-            use_cross: false
-            asset_ext: tar.gz
           - target: x86_64-unknown-linux-musl
             os: ubuntu-latest
-            use_cross: true
-            asset_ext: tar.gz
           - target: aarch64-unknown-linux-gnu
             os: ubuntu-latest
-            use_cross: true
-            asset_ext: tar.gz
           - target: aarch64-unknown-linux-musl
             os: ubuntu-latest
-            use_cross: true
-            asset_ext: tar.gz
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -139,18 +127,12 @@ jobs:
 
       - name: Build binary
         run: |
-          BUILD_COMMAND_PREFIX=""
-          if [[ "${{ matrix.use_cross }}" == "true" ]]; then
-            BUILD_COMMAND_PREFIX="cross"
-          else
-            BUILD_COMMAND_PREFIX="cargo"
-          fi
-          $BUILD_COMMAND_PREFIX build --release --target ${{ matrix.target }}
+          cross build --release --target ${{ matrix.target }}
 
       - name: Prepare artifact file name
         id: artifact_details
         run: |
-          asset_filename="${{ env.BINARY_NAME }}-${{ needs.determine_version_info.outputs.version_name }}-${{ matrix.target }}.${{ matrix.asset_ext }}"
+          asset_filename="${{ env.BINARY_NAME }}-${{ needs.determine_version_info.outputs.version_name }}-${{ matrix.target }}.tar.gz"
           echo "asset_filename=$asset_filename" >> $GITHUB_OUTPUT
 
       - name: Package binary
@@ -165,11 +147,7 @@ jobs:
             exit 1
           fi
 
-          if [[ "${{ matrix.asset_ext }}" == "zip" ]]; then
-            (cd "$BINARY_PATH_PREFIX" && zip "../../${FINAL_ASSET_PATH}" "${{ env.BINARY_NAME }}")
-          else # tar.gz
-            tar czvf "${FINAL_ASSET_PATH}" -C "$BINARY_PATH_PREFIX" "${{ env.BINARY_NAME }}"
-          fi
+          tar czvf "${FINAL_ASSET_PATH}" -C "$BINARY_PATH_PREFIX" "${{ env.BINARY_NAME }}"
           echo "Packaged to ${FINAL_ASSET_PATH}"
 
       - name: Upload artifact
